manifests/local-staging/sample-ai/inference-api-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-ai-inference-api-vs
  namespace: istio-system
spec:
  hosts:
    - "api.sample-ai.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: sample-ai-inference-api-staging.sample-ai-staging.svc.cluster.local
            port:
              number: 80
